--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">43 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -136,7 +136,7 @@
                     <div class="video-info">
                         <h3>Coding a Forex Factory News Filter for the5ers Prop Firm Expert Advisor</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">31 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -180,7 +180,7 @@
                     <div class="video-info">
                         <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -213,7 +213,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US: FORTNITE EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2298,7 +2298,7 @@
                     <div class="video-info">
                         <h3>REX Oscillator Strategy (Backtested)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 01, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5089,7 +5089,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">43 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5100,7 +5100,7 @@
                         <div class="video-info">
                             <h3>Coding a Forex Factory News Filter for the5ers Prop Firm Expert Advisor</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">31 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -6041,7 +6041,7 @@
                         <div class="video-info">
                             <h3>REX Oscillator Strategy (Backtested)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 01, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7268,7 +7268,7 @@
                         <div class="video-info">
                             <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9580,7 +9580,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US: FORTNITE EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
