--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Meditator's Mistake, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">14 minutes ago</div>
+                        <div class="date">24 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -158,7 +158,7 @@
                     <div class="video-info">
                         <h3>Navratri special: How Ramanujan’s Devi gave black hole theory | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                     <div class="video-info">
                         <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -666,7 +666,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1414,7 +1414,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US PROXIMITY CHAT BUT THE IMPOSTOR CAN CONTROL CREWMATES</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1425,7 +1425,7 @@
                     <div class="video-info">
                         <h3>The Universe in Disguise, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7246,7 +7246,7 @@
                         <div class="video-info">
                             <h3>The Meditator's Mistake, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">14 minutes ago</div>
+                            <div class="date">24 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7257,7 +7257,7 @@
                         <div class="video-info">
                             <h3>Navratri special: How Ramanujan’s Devi gave black hole theory | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7279,7 +7279,7 @@
                         <div class="video-info">
                             <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7455,7 +7455,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7697,7 +7697,7 @@
                         <div class="video-info">
                             <h3>The Universe in Disguise, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9679,7 +9679,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US PROXIMITY CHAT BUT THE IMPOSTOR CAN CONTROL CREWMATES</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
