--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <div class="video-info">
                         <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -358,7 +358,7 @@
                     <div class="video-info">
                         <h3>My Biggest Golf Swing Discovery: "If I knew this years ago I would be on tour"</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2276,7 +2276,7 @@
                     <div class="video-info">
                         <h3>The way we learned the takeaway is FUNDAMENTALLY FLAWED 🤯</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 01, 2025</div>
                     </div>
                 </a>
             </div>
@@ -7279,7 +7279,7 @@
                         <div class="video-info">
                             <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9409,7 +9409,7 @@
                         <div class="video-info">
                             <h3>My Biggest Golf Swing Discovery: "If I knew this years ago I would be on tour"</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9497,7 +9497,7 @@
                         <div class="video-info">
                             <h3>The way we learned the takeaway is FUNDAMENTALLY FLAWED 🤯</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 01, 2025</div>
                         </div>
                     </a>
                 </div>
